--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
+accompanistSwiperefresh = "0.30.1"
 agp = "8.10.1"
 coilCompose = "2.5.0"
+composeBomVersion = "2024.04.01"
 composeShimmer = "1.3.3"
 converterMoshi = "2.11.0"
 coreSplashscreen = "1.0.1"
@@ -16,6 +18,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.06.01"
 loggingInterceptor = "4.12.0"
 materialIconsExtended = "1.7.8"
+materialPullRefresh = "1.0.0"
 moshi = "1.15.2"
 moshiKotlin = "1.15.0"
 navigationCompose = "2.9.0"
@@ -24,10 +27,13 @@ retrofit = "2.11.0"
 roomCompiler = "2.7.2"
 
 [libraries]
+accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
+androidx-compose-bom-v20240401 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+androidx-material-pull-refresh = { module = "androidx.compose.material:material-pull-refresh", version.ref = "materialPullRefresh" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingCompose" }
