--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
 accompanistSwiperefresh = "0.30.1"
 agp = "8.10.1"
+appcompat = "1.7.1"
 coilCompose = "2.5.0"
 composeBomVersion = "2024.04.01"
 composeShimmer = "1.3.3"
 converterMoshi = "2.11.0"
 coreSplashscreen = "1.0.1"
+datastorePreferences = "1.1.7"
 hiltAndroidCompiler = "2.56.2"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.0.0"
@@ -25,12 +27,15 @@ navigationCompose = "2.9.0"
 pagingCompose = "3.3.6"
 retrofit = "2.11.0"
 roomCompiler = "2.7.2"
+datastoreCoreAndroid = "1.1.7"
 
 [libraries]
 accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-compose-bom-v20240401 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-material-pull-refresh = { module = "androidx.compose.material:material-pull-refresh", version.ref = "materialPullRefresh" }
@@ -62,6 +67,7 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
